Fixed typo in main filename

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "http://bulma.io",
   "author": "jgthms <bbxdesign@gmail.com>",
   "description": "Bulma is a modern CSS framework based on Flexbox",
-  "main": "bullma.sass",
+  "main": "bulma.sass",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jgthms/bulma.git"
