--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.4",
   "homepage": "http://bulma.io",
   "author": "jgthms <bbxdesign@gmail.com>",
-  "description": "Bulma is a modern CSS framework based on Flexbox",
+  "description": "Modern CSS framework based on Flexbox",
   "main": "bulma.sass",
   "repository": {
     "type": "git",
