--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bulma",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "homepage": "http://bulma.io",
   "author": "jgthms <bbxdesign@gmail.com>",
   "description": "Modern CSS framework based on Flexbox",
@@ -21,8 +21,8 @@
     "url": "https://github.com/jgthms/bulma/issues"
   },
   "devDependencies": {
-    "node-sass": "~3.4.2",
-    "captain-git-hook": "~1.0.5"
+    "captain-git-hook": "~1.0.5",
+    "node-sass": "~3.4.2"
   },
   "scripts": {
     "build": "npm run clean && npm run build-sass && npm run build-sass-min",
