--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   "devDependencies": {
     "autoprefixer": "^6.3.3",
     "captain-git-hook": "~1.0.5",
+    "gulp": "^3.9.1",
+    "gulp-postcss": "^6.1.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
     "node-sass": "^3.4.2"
   },
   "scripts": {
-    "autoprefix": "postcss --use autoprefixer --output css/bulma.css css/bulma.css",
-    "autoprefix-min": "postcss --use autoprefixer --output css/bulma.min.css css/bulma.min.css",
-    "build": "npm run clean && npm run build-sass && npm run build-sass-min && npm run autoprefix && npm run autoprefix-min",
-    "build-sass": "node-sass --output-style expanded --source-map true --output css/ bulma.sass --outFile css/bulma.css",
-    "build-sass-min": "node-sass --output-style compressed --source-map true --output css/ bulma.sass css/bulma.min.css",
     "clean": "rm -rf css",
-    "pre-push": "npm run build",
-    "start": "npm run build-sass -- --watch"
+    "dev": "./node_modules/.bin/gulp expanded",
+    "min": "npm run clean && ./node_modules/.bin/gulp compressed",
+    "build": "npm run clean && ./node_modules/.bin/gulp build"
   }
 }
