Add commit amend to pre-push hook

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build-sass": "node-sass --output-style expanded --source-map true --output css/ bulma.sass --outFile css/bulma.css",
     "build-sass-min": "node-sass --output-style compressed --source-map true --output css/ bulma.sass css/bulma.min.css",
     "clean": "rm -rf css",
-    "pre-push": "npm run build",
+    "pre-push": "npm run build && git add css && git commit --amend --no-edit",
     "start": "npm run build-sass -- --watch"
   }
 }
