Add package files whitelist

--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "clean": "rm -rf css",
     "pre-push": "npm run build && git add css && git commit --amend --no-edit",
     "start": "npm run build-sass -- --watch"
-  }
+  },
+  "files": [
+    "css",
+    "sass",
+    "bulma.sass"
+  ]
 }
