Fix flex shrink

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url:           "http://bulma.io"
 # Variables
 
 baseurl:       ""
-cssurl:        "/styles/bulma-website.css"
+cssurl:        "/css/bulma-docs.css"
 documentation: "/documentation/overview/start/"
 download:      "https://github.com/jgthms/bulma/archive/0.1.2.zip"
 github:        "https://github.com/jgthms/bulma"
