Add docs css folder

--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,10 +1,12 @@
+# Files
 .DS_Store
+_config.local.yml
+bulma-website-local.sass
+npm-debug.log
+
+# Folders
 .sass-cache
 /_sass
 /bulma
-/css
 /styles/node_modules
-_config.local.yml
 _site
-bulma-website-local.sass
-npm-debug.log
