Fix docs config

--- a/_config.yml
+++ b/_config.yml
@@ -5,16 +5,15 @@ description:   "Bulma is a CSS framework based on Flexbox and built with Sass"
 
 # Build
 
-encoding:      UTF-8
 markdown:      kramdown
 permalink:     pretty
 source:        docs
-url:           "http://bulma.io"
+url:           http://bulma.io
 
 # Variables
 
 baseurl:       ""
 documentation: "/documentation/overview/start/"
-download:      "https://github.com/jgthms/bulma/archive/0.1.2.zip"
-github:        "https://github.com/jgthms/bulma"
+download:      https://github.com/jgthms/bulma/archive/0.1.2.zip
+github:        https://github.com/jgthms/bulma
 version:       0.1.2
