Add new favicons

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Meta
 
 title:         "Bulma: a modern CSS framework based on Flexbox"
-description:   "Bulma is a CSS framework based on Flexbox and built with Sass"
+description:   "Bulma is an open source CSS framework based on Flexbox and built with Sass. It's 100% responsive, fully modular, and available for free."
 
 # Build
 
