--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bulma",
   "version": "0.1.2",
   "homepage": "http://bulma.io",
-  "author": "jgthms <bbxdesign@gmail.com>",
+  "author": "Jeremy Thomas <bbxdesign@gmail.com> (http://jgthms.com)",
   "description": "Modern CSS framework based on Flexbox",
   "main": "bulma.sass",
   "repository": {
@@ -42,6 +42,8 @@
   "files": [
     "css",
     "sass",
-    "bulma.sass"
+    "bulma.sass",
+    "LICENSE",
+    "README.md"
   ]
 }
