--- a/docs/favicons/manifest.json
+++ b/docs/favicons/manifest.json
@@ -1,41 +1,12 @@
 {
-	"name": "Bulma",
+	"name": "bulma.io",
 	"icons": [
 		{
-			"src": "\/favicons\/android-chrome-36x36.png",
-			"sizes": "36x36",
-			"type": "image\/png",
-			"density": 0.75
-		},
-		{
-			"src": "\/favicons\/android-chrome-48x48.png",
-			"sizes": "48x48",
-			"type": "image\/png",
-			"density": 1
-		},
-		{
-			"src": "\/favicons\/android-chrome-72x72.png",
-			"sizes": "72x72",
-			"type": "image\/png",
-			"density": 1.5
-		},
-		{
-			"src": "\/favicons\/android-chrome-96x96.png",
-			"sizes": "96x96",
-			"type": "image\/png",
-			"density": 2
-		},
-		{
-			"src": "\/favicons\/android-chrome-144x144.png",
-			"sizes": "144x144",
-			"type": "image\/png",
-			"density": 3
-		},
-		{
-			"src": "\/favicons\/android-chrome-192x192.png",
+			"src": "\/favicons\/android-chrome-192x192.png?v=201609241700",
 			"sizes": "192x192",
-			"type": "image\/png",
-			"density": 4
+			"type": "image\/png"
 		}
-	]
+	],
+	"theme_color": "#11e4c4",
+	"display": "standalone"
 }
