--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bulma",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "homepage": "http://bulma.io",
   "author": "Jeremy Thomas <bbxdesign@gmail.com> (http://jgthms.com)",
   "description": "Modern CSS framework based on Flexbox",
@@ -31,6 +31,7 @@
     "build-autoprefix": "postcss --use autoprefixer --output css/bulma.css css/bulma.css",
     "build-clean": "rm -rf css",
     "build-sass": "node-sass --output-style expanded --source-map true bulma.sass css/bulma.css",
+    "deploy": "npm run build && npm run docs",
     "docs": "npm run docs-sass && npm run docs-autoprefix",
     "docs-autoprefix": "postcss --use autoprefixer --output docs/css/bulma-docs.css docs/css/bulma-docs.css",
     "docs-sass": "node-sass --output-style expanded docs/bulma-docs.sass docs/css/bulma-docs.css",
