--- a/docs/favicons/manifest.json
+++ b/docs/favicons/manifest.json
@@ -1,12 +1,12 @@
 {
-	"name": "bulma.io",
+	"name": "Bulma",
 	"icons": [
 		{
-			"src": "\/favicons\/android-chrome-192x192.png?v=201609241700",
+			"src": "\/favicons\/android-chrome-192x192.png?v=201609251738",
 			"sizes": "192x192",
 			"type": "image\/png"
 		}
 	],
-	"theme_color": "#11e4c4",
+	"theme_color": "#00d1b2",
 	"display": "standalone"
 }
