Fix button icons

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,6 +8,7 @@ description:   "Bulma is an open source CSS framework based on Flexbox and built
 markdown:      kramdown
 permalink:     pretty
 url:           http://bulma.io
+fontawesome:   https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css
 
 # Variables
 
