update package.json to use "style" field
The style field is useful so that this package can be used with JS libraries that working with such as [sheetify](https://github.com/stackcss/sheetify)  which uses [style-resolve](https://github.com/stackcss/style-resolve) under the hood.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Jeremy Thomas <bbxdesign@gmail.com> (http://jgthms.com)",
   "description": "Modern CSS framework based on Flexbox",
   "main": "bulma.sass",
+  "style": "bulma/css/bulma.css",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jgthms/bulma.git"
