--- a/docs/favicons/manifest.json
+++ b/docs/favicons/manifest.json
@@ -1,9 +1,14 @@
 {
-	"name": "Bulma",
+	"name": "",
 	"icons": [
 		{
-			"src": "\/favicons\/android-chrome-192x192.png?v=201609251738",
+			"src": "\/favicons\/android-chrome-192x192.png?v=201701041855",
 			"sizes": "192x192",
+			"type": "image\/png"
+		},
+		{
+			"src": "\/favicons\/android-chrome-384x384.png?v=201701041855",
+			"sizes": "384x384",
 			"type": "image\/png"
 		}
 	],
