--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "autoprefixer": "^6.3.3",
     "captain-git-hook": "~1.0.5",
     "node-sass": "^3.4.2",
-    "postcss-cli": "^2.5.1"
+    "postcss-cli": "^2.5.1",
+    "rimraf": "^2.6.1"
   },
   "scripts": {
     "build": "npm run build-clean && npm run build-sass && npm run build-autoprefix",
     "build-autoprefix": "postcss --use autoprefixer --output css/bulma.css css/bulma.css",
-    "build-clean": "rm -rf css",
+    "build-clean": "rimraf css",
     "build-sass": "node-sass --output-style expanded --source-map true bulma.sass css/bulma.css",
     "deploy": "npm run build && npm run docs",
     "docs": "npm run docs-sass && npm run docs-autoprefix",
