Fixed a forgotten merge

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
 # Files
 .DS_Store
+.project
 .ruby-version
 test.sass
 npm-debug.log
 
 # Folders
 .idea/
-<<<<<<< HEAD
-/.project
-=======
 .sass-cache
 _gh_pages
 _site
 node_modules
->>>>>>> refs/remotes/original/master
