Task: Package name (#3)
* Updated package name

* Updated package json

--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "bulma",
+  "name": "bulma-scss-components",
   "version": "0.4.2",
   "homepage": "http://bulma.io",
-  "author": "Jeremy Thomas <bbxdesign@gmail.com> (http://jgthms.com)",
-  "description": "Modern CSS framework based on Flexbox",
-  "main": "bulma.sass",
+  "author": "Tiago Marques",
+  "description": "Component-oriented scss styling for Bulma",
+  "main": "bulma.scss",
   "style": "bulma/css/bulma.css",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jgthms/bulma.git"
+    "url": "https://github.com/tiagomapmarques/bulma-scss-components"
   },
   "license": "MIT",
   "keywords": [
     "css",
-    "sass",
+    "scss",
     "flexbox",
     "responsive",
     "framework"
   ],
-  "bugs": {
-    "url": "https://github.com/jgthms/bulma/issues"
-  },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
     "captain-git-hook": "~1.0.5",
@@ -45,7 +42,9 @@
   "files": [
     "css",
     "sass",
+    "scss",
     "bulma.sass",
+    "bulma.scss",
     "LICENSE",
     "README.md"
   ]
