--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,3 +16,4 @@ documentation: "/documentation/overview/start/"
 download:      https://github.com/jgthms/bulma/archive/0.4.2.zip
 github:        https://github.com/jgthms/bulma
 version:       0.4.2
+vernum:        42
