--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,6 +9,7 @@ markdown:      kramdown
 permalink:     pretty
 url:           http://bulma.io
 fontawesome:   https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css
+exclude:       ['fontawesome', 'node_modules', 'templates', '.babelrc', 'bulma-docs.sass', 'docker-compose.yml', 'package.json', 'yarn.lock']
 
 # Variables
 
