Add navbar description

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,5 +16,6 @@ exclude:       ['fontawesome', 'node_modules', 'templates', '.babelrc', 'bulma-d
 documentation: "/documentation/overview/start/"
 download:      https://github.com/jgthms/bulma/archive/0.4.2.zip
 github:        https://github.com/jgthms/bulma
+twitter:       https://twitter.com/jgthms
 version:       0.4.2
 vernum:        42
