--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,6 +2,7 @@
 
 title:         "Bulma: a modern CSS framework based on Flexbox"
 description:   "Bulma is an open source CSS framework based on Flexbox and built with Sass. It's 100% responsive, fully modular, and available for free."
+env:           "production"
 
 # Build
 
