Updated package.json and newly added components

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "bulma",
   "version": "0.5.1",
   "homepage": "http://bulma.io",
-  "author": "Jeremy Thomas <bbxdesign@gmail.com> (http://jgthms.com)",
+  "authors": [
+    "Jeremy Thomas <bbxdesign@gmail.com> (http://jgthms.com)",
+    "Mohammad Rafigh <mohammad.rafigh@gmail.com> (http://lostsemicolon.com)"
+  ],
   "description": "Modern CSS framework based on Flexbox",
   "main": "bulma.sass",
   "style": "bulma/css/bulma.css",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jgthms/bulma.git"
+    "url": "git+https://github.com/mohammadrafigh/bulma-rtl.git"
   },
   "license": "MIT",
   "keywords": [
@@ -19,7 +22,7 @@
     "framework"
   ],
   "bugs": {
-    "url": "https://github.com/jgthms/bulma/issues"
+    "url": "https://github.com/mohammadrafigh/bulma-rtl/issues"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
