Changed package name

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "bulma",
+  "name": "bulma-rtl",
   "version": "0.5.1",
   "homepage": "http://bulma.io",
   "authors": [
     "Jeremy Thomas <bbxdesign@gmail.com> (http://jgthms.com)",
     "Mohammad Rafigh <mohammad.rafigh@gmail.com> (http://lostsemicolon.com)"
   ],
-  "description": "Modern CSS framework based on Flexbox",
-  "main": "bulma.sass",
+  "description": "RTL fork of Bulma",
+  "main": "bulma-rtl.sass",
   "style": "bulma/css/bulma.css",
   "repository": {
     "type": "git",
