Fix #395, Fix #735, Fix #930

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,6 +10,7 @@ markdown:      kramdown
 permalink:     pretty
 url:           http://bulma.io
 fontawesome:   https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
+mdi:           https://cdn.materialdesignicons.com/1.7.22/css/materialdesignicons.min.css
 exclude:       ['fontawesome', 'node_modules', 'templates', '.babelrc', 'bulma-docs.sass', 'docker-compose.yml', 'package.json', 'yarn.lock']
 
 # Variables
