--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,9 +9,14 @@ env:           "production"
 markdown:      kramdown
 permalink:     pretty
 url:           http://bulma.io
-fontawesome:   https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
-mdi:           https://cdn.materialdesignicons.com/1.7.22/css/materialdesignicons.min.css
 exclude:       ['fontawesome', 'node_modules', 'templates', '.babelrc', 'bulma-docs.sass', 'docker-compose.yml', 'package.json', 'yarn.lock']
+
+# Icons
+
+fontawesome:   https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
+iconic:        https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic.min.css
+ionicons:      http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css
+mdi:           https://cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css
 
 # Variables
 
