Remove docs css map

--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -6,6 +6,7 @@ _config.version.yml
 bulma-test.sass
 bulma-website-local.sass
 css/bulma-test.css
+css/bulma-docs.css.map
 PUBLISHING.md
 npm-debug.log
 
