--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,7 +15,7 @@ exclude:       ['icons', 'node_modules', 'templates', '.babelrc', 'bulma-docs.sa
 
 fontawesome:   https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
 iconic:        https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic.min.css
-ionicons:      http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css
+ionicons:      https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css
 mdi:           https://cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css
 
 # Variables
