Use https for Bulma

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,7 +8,7 @@ env:           "production"
 
 markdown:      kramdown
 permalink:     pretty
-url:           http://bulma.io
+url:           https://bulma.io
 exclude:       ['icons', 'node_modules', 'templates', '.babelrc', 'bulma-docs.sass', 'docker-compose.yml', 'package.json', 'yarn.lock']
 
 # Icons
