Ignore versions subfolder

--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,4 +1,5 @@
 # Files
+
 .DS_Store
 .jekyll-metadata
 _config.local.yml
@@ -11,8 +12,10 @@ PUBLISHING.md
 npm-debug.log
 
 # Folders
+
 .sass-cache
 /bulma
 /icons
 /styles/node_modules
+/versions
 _site
