Added rtl build scripts

--- a/package.json
+++ b/package.json
@@ -32,17 +32,28 @@
   },
   "scripts": {
     "build": "npm run build-clean && npm run build-sass && npm run build-autoprefix",
+    "build-rtl": "npm run build-clean && npm run build-sass-rtl && npm run build-autoprefix-rtl",
     "build-autoprefix": "postcss --use autoprefixer --map false --output css/bulma.css css/bulma.css",
+    "build-autoprefix-rtl": "postcss --use autoprefixer --map false --output css/bulma-rtl.css css/bulma-rtl.css",
     "build-clean": "rimraf css",
     "build-sass": "node-sass --output-style expanded --source-map true bulma.sass css/bulma.css",
+    "build-sass-rtl": "node-sass --output-style expanded --source-map true bulma-rtl.sass css/bulma-rtl.css",
     "deploy": "npm run build && npm run docs",
+    "deploy-rtl": "npm run build-rtl && npm run docs-rtl",
     "docs": "npm run docs-sass && npm run docs-autoprefix",
+    "docs-rtl": "npm run docs-sass-rtl && npm run docs-autoprefix-rtl",
     "docs-autoprefix": "postcss --use autoprefixer --map false --output docs/css/bulma-docs.css docs/css/bulma-docs.css",
+    "docs-autoprefix-rtl": "postcss --use autoprefixer --map false --output docs/css/bulma-docs-rtl.css docs/css/bulma-docs-rtl.css",
     "docs-sass": "node-sass --output-style expanded docs/bulma-docs.sass docs/css/bulma-docs.css",
+    "docs-sass-rtl": "node-sass --output-style expanded docs/bulma-docs-rtl.sass docs/css/bulma-docs-rtl.css",
     "start": "npm run build-sass -- --watch",
+    "start-rtl": "npm run build-sass-rtl -- --watch",
     "start-docs": "npm run docs-sass -- --watch",
+    "start-docs-rtl": "npm run docs-sass-rtl -- --watch",
     "start-test": "npm run test-sass -- --watch",
-    "test-sass": "node-sass --output-style expanded docs/bulma-test.sass docs/css/bulma-test.css"
+    "start-test-rtl": "npm run test-sass-rtl -- --watch",
+    "test-sass": "node-sass --output-style expanded docs/bulma-test.sass docs/css/bulma-test.css",
+    "test-sass-rtl": "node-sass --output-style expanded docs/bulma-test-rtl.sass docs/css/bulma-test-rtl.css"
   },
   "files": [
     "css",
