--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,13 @@ script:
 language: sass
 before_install:
  - gem install sass
+ 
+ notifications:
+  webhooks:
+      urls:
+        - https://www.travisbuddy.com/
+      on_success: never
+      on_failure: always
+      on_start: never
+      on_cancel: never
+      on_error: never
