--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -5,11 +5,15 @@
 _config.local.yml
 _config.version.yml
 bulma-test.sass
+bulma-test.scss
+bulma-test.css
 bulma-website-local.sass
 css/bulma-test.css
 css/bulma-docs.css.map
 PUBLISHING.md
 npm-debug.log
+test.sass
+test.scss
 
 # Folders
 
