Increment bulma package to auto-generate SCSS files

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "main": "bulma.sass",
   "keywords": [
     "css",
+    "scss",
     "sass",
     "flexbox",
     "responsive",
@@ -22,6 +23,7 @@
     "test",
     "tests",
     "docs",
-    "images"
+    "images",
+    "package-lock.json"
   ]
 }
