--- a/package.json
+++ b/package.json
@@ -1,57 +1,59 @@
 {
-  "name": "bulma",
-  "version": "0.6.1",
-  "homepage": "https://bulma.io",
-  "author": "Jeremy Thomas <bbxdesign@gmail.com> (http://jgthms.com)",
-  "description": "Modern CSS framework based on Flexbox",
-  "main": "bulma.sass",
-  "style": "bulma/css/bulma.css",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jgthms/bulma.git"
-  },
-  "license": "MIT",
-  "keywords": [
-    "css",
-    "sass",
-    "flexbox",
-    "responsive",
-    "framework"
-  ],
-  "bugs": {
-    "url": "https://github.com/jgthms/bulma/issues"
-  },
-  "devDependencies": {
-    "autoprefixer": "^7.1.1",
-    "node-sass": "^4.5.3",
-    "postcss-cli": "^4.1.0",
-    "replace-in-file": "^3.0.0",
-    "rimraf": "^2.6.1",
-    "sass-convert": "^0.5.2"
-  },
-  "scripts": {
-    "build": "npm run build-clean && npm run build-sass && npm run build-autoprefix",
-    "build-autoprefix": "postcss --use autoprefixer --map false --output css/bulma.css css/bulma.css",
-    "build-clean": "rimraf css && rimraf bulma.scss && rimraf scss",
-    "build-sass": "node-sass --output-style expanded --source-map true bulma.sass css/bulma.css && npm run build-scss",
-    "build-scss": "sass-convert -T scss bulma.sass bulma.scss && sass-convert --recursive --from sass --to scss sass scss && replace-in-file /sass/g scss bulma.scss,scss/**/*.scss --isRegex",
-    "deploy": "npm run build && npm run docs",
-    "docs": "npm run docs-sass && npm run docs-autoprefix",
-    "docs-autoprefix": "postcss --use autoprefixer --map false --output docs/css/bulma-docs.css docs/css/bulma-docs.css",
-    "docs-sass": "node-sass --output-style expanded docs/bulma-docs.sass docs/css/bulma-docs.css",
-    "start": "npm run build-sass -- --watch",
-    "start-docs": "npm run docs-sass -- --watch",
-    "start-test": "npm run test-sass -- --watch",
-    "test-sass": "node-sass --output-style expanded docs/bulma-test.sass docs/css/bulma-test.css",
-    "test-scss": "node-sass --output-style expanded docs/bulma-test.scss docs/css/bulma-test.css"
-  },
-  "files": [
-    "css",
-    "sass",
-    "scss",
-    "bulma.sass",
-    "bulma.scss",
-    "LICENSE",
-    "README.md"
-  ]
+    "name": "bulma",
+    "version": "0.6.1",
+    "homepage": "https://bulma.io",
+    "author": "Jeremy Thomas <bbxdesign@gmail.com> (http://jgthms.com)",
+    "description": "Modern CSS framework based on Flexbox",
+    "main": "bulma.sass",
+    "style": "bulma/css/bulma.css",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/jgthms/bulma.git"
+    },
+    "license": "MIT",
+    "keywords": [
+        "css",
+        "sass",
+        "flexbox",
+        "responsive",
+        "framework"
+    ],
+    "bugs": {
+        "url": "https://github.com/jgthms/bulma/issues"
+    },
+    "devDependencies": {
+        "autoprefixer": "^7.1.1",
+        "node-sass": "^4.5.3",
+        "postcss-cli": "^4.1.0",
+        "replace-in-file": "^3.0.0",
+        "rimraf": "^2.6.1",
+        "sass-convert": "^0.5.2"
+    },
+    "scripts": {
+        "build": "npm run build-clean && npm run build-sass && npm run build-autoprefix && npm run build-scss",
+        "build-autoprefix": "postcss --use autoprefixer --map false --output css/bulma.css css/bulma.css",
+        "build-clean": "rimraf css && rimraf bulma.scss && rimraf scss",
+        "build-sass": "node-sass --output-style expanded --source-map true bulma.sass css/bulma.css",
+        "build-scss": "sass-convert -T scss bulma.sass bulma.scss && sass-convert --recursive --from sass --to scss sass scss && replace-in-file /sass/g scss bulma.scss,scss/**/*.scss --isRegex",
+        "deploy": "npm run build && npm run docs",
+        "docs": "npm run docs-sass && npm run docs-autoprefix",
+        "docs-autoprefix": "postcss --use autoprefixer --map false --output docs/css/bulma-docs.css docs/css/bulma-docs.css",
+        "docs-sass": "node-sass --output-style expanded docs/bulma-docs.sass docs/css/bulma-docs.css",
+        "preinstall": "npm i -g sass-convert replace-in-file rimraf",
+        "start": "npm run build-sass -- --watch",
+        "start-docs": "npm run docs-sass -- --watch",
+        "start-test": "npm run test-sass -- --watch",
+        "sass-convert": "sass-convert",
+        "test-sass": "node-sass --output-style expanded docs/bulma-test.sass docs/css/bulma-test.css",
+        "test-scss": "node-sass --output-style expanded docs/bulma-test.scss docs/css/bulma-test.css"
+    },
+    "files": [
+        "css",
+        "sass",
+        "scss",
+        "bulma.sass",
+        "bulma.scss",
+        "LICENSE",
+        "README.md"
+    ]
 }
