--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bulma",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "homepage": "https://bulma.io",
-  "author": "Jeremy Thomas <bbxdesign@gmail.com> (http://jgthms.com)",
+  "author": "Jeremy Thomas <bbxdesign@gmail.com> (https://jgthms.com)",
   "description": "Modern CSS framework based on Flexbox",
   "main": "bulma.sass",
   "style": "bulma/css/bulma.css",
