--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,3 +18,9 @@ download:      https://github.com/jgthms/bulma/releases/download/0.6.2/bulma-0.6
 github:        https://github.com/jgthms/bulma
 twitter:       https://twitter.com/jgthms
 version:       0.6.2
+
+# Search
+
+algolia:
+  key:         a58d77bf81d5eb18853fcd332d997f8e
+  index:       bulma
