--- a/package.json
+++ b/package.json
@@ -34,15 +34,8 @@
     "build-cleancss": "cleancss -o css/bulma.min.css css/bulma.css",
     "build-clean": "rimraf css",
     "build-sass": "node-sass --output-style expanded --source-map true bulma.sass css/bulma.css",
-    "deploy": "npm run build && npm run docs",
-    "docs": "npm run docs-sass && npm run docs-autoprefix && npm run docs-cleancss",
-    "docs-autoprefix": "postcss --use autoprefixer --map false --output docs/css/bulma-docs.css docs/css/bulma-docs.css",
-    "docs-cleancss": "cleancss -o docs/css/bulma-docs.min.css docs/css/bulma-docs.css",
-    "docs-sass": "node-sass --output-style expanded docs/bulma-docs.sass docs/css/bulma-docs.css",
-    "start": "npm run build-sass -- --watch",
-    "start-docs": "npm run docs-sass -- --watch",
-    "start-test": "npm run test-scss -- --watch",
-    "test-scss": "node-sass --output-style expanded docs/bulma-test.scss docs/css/bulma-test.css"
+    "deploy": "npm run build",
+    "start": "npm run build-sass -- --watch"
   },
   "files": [
     "css",
