--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,9 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015-ie": "^6.7.0",
     "clean-css-cli": "^4.1.11",
+    "metalsmith": "^2.3.0",
+    "metalsmith-filter": "^1.0.2",
+    "metalsmith-writemetadata": "^0.4.5",
     "node-sass": "^4.8.3",
     "postcss-cli": "^5.0.0"
   },
