Fix relative links

--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "bulma",
   "version": "0.7.2",
   "homepage": "https://bulma.io",
-  "author": "Jeremy Thomas <bbxdesign@gmail.com> (https://jgthms.com)",
+  "author": {
+    "name": "Jeremy Thomas",
+    "email": "bbxdesign@gmail.com",
+    "url": "https://jgthms.com"
+  },
   "description": "Modern CSS framework based on Flexbox",
   "main": "bulma.sass",
   "unpkg": "css/bulma.css",
