--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
 # Files
+
 .DS_Store
 .ruby-version
+npm-debug.log
 test.html
 test.sass
-npm-debug.log
 
 # Folders
+
 .idea/
 .sass-cache
 _gh_pages
 _site
+dev
 node_modules
 test/output/
