--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "bulma",
+  "name": "mikasa",
   "version": "0.7.5",
-  "homepage": "https://bulma.io",
+  "homepage": "https://github.com/mrg0lden/mikasa",
   "author": {
-    "name": "Jeremy Thomas",
-    "email": "bbxdesign@gmail.com",
-    "url": "https://jgthms.com"
+    "name": "Mohammed Bumonther",
+    "email": "8347078+mrg0lden@users.noreply.github.com",
+    "url": "https://twitter.com/mrg0lden"
   },
   "description": "Modern CSS framework based on Flexbox",
   "main": "bulma.sass",
@@ -13,7 +13,7 @@
   "style": "bulma/css/bulma.min.css",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jgthms/bulma.git"
+    "url": "git+https://github.com/mrg0lden/mikasa.git"
   },
   "license": "MIT",
   "keywords": [
@@ -24,7 +24,7 @@
     "framework"
   ],
   "bugs": {
-    "url": "https://github.com/jgthms/bulma/issues"
+    "url": "https://github.com/mrg0lden/mikasa/issues"
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
