Make bulma themeable with full backward compatibility :sparkles:

--- a/docs/package.json
+++ b/docs/package.json
@@ -13,11 +13,12 @@
     "metalsmith": "^2.3.0",
     "metalsmith-filter": "^1.0.2",
     "node-sass": "^4.13.1",
+    "postcss-calc": "^7.0.2",
     "postcss-cli": "^7.1.0"
   },
   "scripts": {
     "css-build": "npm run css-sass && npm run css-autoprefix && npm run css-cleancss",
-    "css-autoprefix": "postcss --use autoprefixer --map false --output css/bulma-docs.css css/bulma-docs.css",
+    "css-autoprefix": "postcss --use autoprefixer --use postcss-calc --map false --output css/bulma-docs.css css/bulma-docs.css",
     "css-cleancss": "cleancss -o css/bulma-docs.min.css css/bulma-docs.css",
     "css-sass": "node-sass --output-style expanded bulma-docs.sass css/bulma-docs.css",
     "css-watch": "npm run css-sass -- --watch",
