--- a/package.json
+++ b/package.json
@@ -30,15 +30,18 @@
     "autoprefixer": "^9.8.0",
     "clean-css-cli": "^4.3.0",
     "node-sass": "^4.14.1",
+    "postcss": "^7.0.32",
+    "postcss-calc": "^7.0.2",
     "postcss-cli": "^7.1.1",
+    "postcss-css-variables": "^0.17.0",
     "rimraf": "^3.0.2"
   },
   "scripts": {
     "build": "npm run build-clean && npm run build-sass && npm run build-autoprefix && npm run build-cleancss",
-    "build-autoprefix": "postcss --use autoprefixer --map false --output css/bulma.css css/bulma.css",
-    "build-cleancss": "cleancss -o css/bulma.min.css css/bulma.css",
+    "build-autoprefix": "postcss --use autoprefixer --use postcss-calc --map false --output css/bulma.css css/bulma.css && postcss --use autoprefixer --map false --output css/bulma.themeable.css css/bulma.themeable.css",
+    "build-cleancss": "cleancss -o css/bulma.min.css css/bulma.css && cleancss -o css/bulma.themeable.min.css css/bulma.themeable.css",
     "build-clean": "rimraf css",
-    "build-sass": "node-sass --output-style expanded --source-map true bulma.sass css/bulma.css",
+    "build-sass": "node build.js",
     "deploy": "npm run build",
     "start": "npm run build-sass -- --watch"
   },
