--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "postcss": "^7.0.32",
     "postcss-calc": "^7.0.2",
     "postcss-cli": "^7.1.1",
-    "postcss-css-variables": "^0.17.0",
     "rimraf": "^3.0.2"
   },
   "scripts": {
@@ -41,7 +40,7 @@
     "build-autoprefix": "postcss --use autoprefixer --use postcss-calc --map false --output css/bulma.css css/bulma.css && postcss --use autoprefixer --map false --output css/bulma.themeable.css css/bulma.themeable.css",
     "build-cleancss": "cleancss -o css/bulma.min.css css/bulma.css && cleancss -o css/bulma.themeable.min.css css/bulma.themeable.css",
     "build-clean": "rimraf css",
-    "build-sass": "node build.js",
+    "build-sass": "node build.js bulma.sass css/bulma",
     "deploy": "npm run build",
     "start": "npm run build-sass -- --watch"
   },
