--- a/docs/package.json
+++ b/docs/package.json
@@ -5,22 +5,16 @@
   "author": "Jeremy Thomas <bbxdesign@gmail.com> (https://jgthms.com)",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^9.7.6",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015-ie": "^6.7.0",
-    "clean-css-cli": "^4.3.0",
     "metalsmith": "^2.3.0",
     "metalsmith-filter": "^1.0.2",
-    "node-sass": "^4.13.1",
-    "postcss-calc": "^7.0.2",
-    "postcss-cli": "^7.1.0"
+    "node-sass": "^4.13.1"
   },
   "scripts": {
-    "css-build": "npm run css-sass && npm run css-autoprefix && npm run css-cleancss",
-    "css-autoprefix": "postcss --use autoprefixer --use postcss-calc --map false --output css/bulma-docs.css css/bulma-docs.css && postcss --use autoprefixer --use postcss-calc --map false --output css/bulma-docs.themeable.css css/bulma-docs.themeable.css",
-    "css-cleancss": "cleancss -o css/bulma-docs.min.css css/bulma-docs.css && cleancss -o css/bulma-docs.themeable.min.css css/bulma-docs.themeable.css",
-    "css-sass": "node ../build.js bulma-docs.sass css/bulma-docs.css",
+    "css-build": "npm run css-sass",
+    "css-sass": "node ../build.js css/bulma-docs.css bulma-docs.sass && node ../build.js css/bulma-docs.themeable.css bulma-docs.sass any",
     "css-watch": "npm run css-sass -- --watch",
     "deploy": "npm run css-build && npm run js-build",
     "js-build": "babel _javascript --out-dir lib",
