--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "rimraf": "^3.0.2"
   },
   "scripts": {
-    "build": "npm run build-clean && npm run build-sass",
+    "build": "npm run build-clean && npm run build-sass && npm run build-sass-vars",
     "build-clean": "rimraf css",
     "build-theme-test": "node build.js css/bulma.theme.css bulma.sass test/themes/darkly.scss test/themes/united.scss",
-    "build-sass": "node build.js css/bulma.css bulma.sass && node build.js css/bulma.themeable.css bulma.sass any",
+    "build-sass": "node build.js css/bulma.css bulma.sass",
+    "build-sass-vars": "node build.js css/bulma.themeable.css bulma.sass any",
     "deploy": "npm run build",
     "start": "npm run build-sass -- --watch"
   },
