Added theming mixins and modified the build process accordingly

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "build": "npm run build-clean && npm run build-sass && npm run build-sass-vars",
     "build-clean": "rimraf css",
-    "build-theme-test": "node build.js css/bulma.theme.css bulma.sass test/themes/darkly.scss test/themes/united.scss",
+    "test-theme": "node build.js test/output/theme.css bulma.sass test/sass/theme.scss",
     "build-sass": "node build.js css/bulma.css bulma.sass",
     "build-sass-vars": "node build.js css/bulma.themeable.css bulma.sass any",
     "deploy": "npm run build",
