Made the docs themeable and added watcher and options to build script

--- a/docs/package.json
+++ b/docs/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "css-build": "npm run css-sass",
-    "css-sass": "node ../build.js css/bulma-docs.css bulma-docs.sass && node ../build.js css/bulma-docs.themeable.css bulma-docs.sass any",
+    "css-sass": "node ../build.js bulma-docs.sass css/bulma-docs.css --themeable",
     "css-watch": "npm run css-sass -- --watch",
     "deploy": "npm run css-build && npm run js-build",
     "js-build": "babel _javascript --out-dir lib",
