--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
   "scripts": {
     "build": "npm run build-clean && npm run build-sass && npm run build-sass-vars",
     "build-clean": "rimraf css",
-    "test-theme": "node build.js test/output/theme.css bulma.sass test/sass/theme.scss",
-    "build-sass": "node build.js css/bulma.css bulma.sass",
-    "build-sass-vars": "node build.js css/bulma.themeable.css bulma.sass any",
+    "test-theme": "node build.js test/sass/theme.scss test/output/theme.css bulma.sass --themeable",
+    "build-sass": "node build.js bulma.sass css/bulma.css",
+    "build-sass-vars": "node build.js bulma.sass css/bulma.themeable.css --themeable --full",
     "deploy": "npm run build",
     "start": "npm run build-sass -- --watch"
   },
