Fixed compressed theme generation

--- a/docs/package.json
+++ b/docs/package.json
@@ -13,8 +13,9 @@
     "node-sass": "^4.13.1"
   },
   "scripts": {
+    "build": "npm run start",
     "css-build": "npm run css-sass",
-    "css-sass": "node ../build.js bulma-docs.sass css/bulma-docs.css --themeable --full",
+    "css-sass": "node ../build.js bulma-docs.sass css/bulma-docs.css --themeable",
     "css-watch": "npm run css-sass -- --watch",
     "deploy": "npm run css-build && npm run js-build",
     "js-build": "babel _javascript --out-dir lib",
