Added doc for themes

--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "build-clean": "rimraf css",
     "test-theme": "node build.js test/sass/theme.scss test/output/theme.css bulma.sass --themeable",
     "build-sass": "npm run build:sass",
-    "build:sass": "node build.js bulma.sass css/bulma.css",
-    "build:sass-vars": "node build.js bulma.sass css/bulma.themeable.css --themeable --full",
+    "build:sass": "node build.js bulma.sass css/bulma.css --map --min",
+    "build:sass-vars": "node build.js bulma.sass css/bulma.themeable.css --themeable --full --map --min",
     "rtl": "npm run build:rtl && echo 'The rtl script has been deprecated use build:rtl instead'",
-    "build:rtl": "node build.js bulma.sass css/bulma-rtl.css --rtl",
+    "build:rtl": "node build.js bulma.sass css/bulma-rtl.css --rtl --map --min",
     "deploy": "npm run build",
     "start": "npm run build-sass -- --watch"
   },
