Added doc for themes

--- a/docs/package.json
+++ b/docs/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "npm run start",
     "css-build": "npm run css-sass",
-    "css-sass": "node ../build.js bulma-docs.sass css/bulma-docs.css --themeable",
+    "css-sass": "node ../build.js bulma-docs.sass css/bulma-docs.css --themeable --min --map",
     "css-watch": "npm run css-sass -- --watch",
     "deploy": "npm run css-build && npm run js-build",
     "js-build": "babel _javascript --out-dir lib",
