Created and added a postcss plugin to optimize the css variables and updated doc

--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "node-sass": "^4.14.1",
     "postcss": "^7.0.32",
     "postcss-calc": "^7.0.2",
-    "postcss-cli": "^7.1.1",
+    "postcss-var-optimize": "^0.0.4",
     "rimraf": "^3.0.2"
   },
   "scripts": {
     "build": "npm run build-clean && npm run build:sass && npm run build:sass-vars && npm run build:rtl",
     "build-clean": "rimraf css",
-    "test-theme": "node build.js test/sass/theme.scss test/output/theme.css bulma.sass --themeable",
+    "test-theme": "node build.js test/sass/theme.sass test/output/theme.css bulma.sass --themeable",
     "build-sass": "npm run build:sass",
     "build:sass": "node build.js bulma.sass css/bulma.css --map --min",
     "build:sass-vars": "node build.js bulma.sass css/bulma.themeable.css --themeable --full --map --min",
