--- a/package.json
+++ b/package.json
@@ -36,16 +36,16 @@
     "rimraf": "^3.0.2"
   },
   "scripts": {
-    "build": "npm run build-clean && npm run build:sass && npm run build:sass-vars && npm run build:rtl",
+    "build": "npm run build-clean && npm run build:sass && npm run build:rtl",
     "build-clean": "rimraf css",
     "test-theme": "node build.js test/sass/theme.sass test/output/theme.css bulma.sass --themeable",
-    "build-sass": "npm run build:sass",
+    "build-sass": "npm run build:sass --",
     "build:sass": "node build.js bulma.sass css/bulma.css --map --min",
     "build:sass-vars": "node build.js bulma.sass css/bulma.themeable.css --themeable --full --map --min",
     "rtl": "npm run build:rtl && echo 'The rtl script has been deprecated use build:rtl instead'",
     "build:rtl": "node build.js bulma.sass css/bulma-rtl.css --rtl --map --min",
     "deploy": "npm run build",
-    "start": "npm run build-sass -- --watch"
+    "start": "npm run build:sass -- --watch"
   },
   "bin": {
     "bulma-build-css": "./build.js"
