Move CSS variables to message scope

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "rtl-sass": "node-sass --output-style expanded --source-map true bulma-rtl.sass css/bulma-rtl.css",
     "rtl-autoprefix": "postcss --use autoprefixer --map false --output css/bulma-rtl.css css/bulma-rtl.css",
     "rtl-cleancss": "cleancss -o css/bulma-rtl.min.css css/bulma-rtl.css",
-    "deploy": "npm run clean && npm run build && npm run rtl",
+    "deploy": "npm run clean && npm run build",
     "start": "npm run build-sass -- --watch"
   },
   "files": [
