Add CSS variables test

--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "bulma.sass",
     "LICENSE",
     "README.md"
-  ]
+  ],
+  "dependencies": {
+    "metalsmith": "^2.3.0",
+    "metalsmith-filter": "^1.0.2"
+  }
 }
