Use latest stable Node.js release for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ matrix:
       script:
         - test/ruby-sass.sh
     - language: node_js
+      node_js:
+        - node
       before_install:
         - npm i -g sass
       script:
