Use before_script

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
     - language: node_js
       node_js:
         - node
-      before_install:
+      before_script:
         - npm i -g sass
       script:
         - node test/dart-sass.js
