Install package locally

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ matrix:
       node_js:
         - node
       before_script:
-        - npm i -g sass
+        - npm install sass
       script:
         - node test/dart-sass.js
