--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,18 @@ matrix:
       before_install:
         - gem install sass
       script:
-        - test/ruby-sass.sh
+        - test/ruby-sass/ruby-sass.sh
     - language: node_js
       node_js:
         - node
       before_script:
         - npm install sass
       script:
-        - node test/dart-sass.js
+        - node test/dart-sass/dart-sass.js
+    - language: node_js
+      node_js:
+        - node
+      before_script:
+        - npm install node-sass
+      script:
+        - node test/node-sass/node-sass.js
