合并最新bulma代码，并修改ming-color

--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "rimraf": "^3.0.2"
   },
   "scripts": {
-    "build": "npm run build-sass && npm run build-autoprefix && npm run build-cleancss",
-    "build": "npm run build-clean && npm run build-sass && npm run build-autoprefix && npm run build-cleancss",
-    "build": "npm run build-clean && npm run build-sass && npm run build-autoprefix && npm run build-addprefix && npm run build-cleancss",
+    "build": "npm run build-sass && npm run build-autoprefix && npm run build-addprefix && npm run build-cleancss",
     "build-autoprefix": "postcss --use autoprefixer --map false --output css/bulma.css css/bulma.css",
     "build-addprefix": "postcss --output css/bulma.css css/bulma.css",
     "build-cleancss": "cleancss -o css/bulma.min.css css/bulma.css",
