--- a/docs/package.json
+++ b/docs/package.json
@@ -12,20 +12,20 @@
     "clean-css-cli": "^4.3.0",
     "metalsmith": "^2.3.0",
     "metalsmith-filter": "^1.0.2",
-    "node-sass": "^4.13.1",
-    "postcss-cli": "^7.1.0"
+    "postcss-cli": "^7.1.0",
+    "sass": "^1.33.0"
   },
   "scripts": {
     "css-build": "npm run css-sass && npm run css-autoprefix && npm run css-cleancss",
     "css-autoprefix": "postcss --use autoprefixer --map false --output css/bulma-docs.css css/bulma-docs.css",
     "css-cleancss": "cleancss -o css/bulma-docs.min.css css/bulma-docs.css",
-    "css-sass": "node-sass --output-style expanded bulma-docs.scss css/bulma-docs.css",
+    "css-sass": "sass bulma-docs.scss css/bulma-docs.css",
     "css-watch": "npm run css-sass -- --watch",
     "deploy": "npm run css-build && npm run js-build",
     "js-build": "babel _javascript --out-dir lib",
     "js-watch": "npm run js-build -- --watch",
     "start": "npm run css-watch | npm run js-watch",
     "start-test": "npm run test-scss -- --watch",
-    "test-scss": "node-sass --output-style expanded bulma-test.scss css/bulma-test.css"
+    "test-scss": "sass bulma-test.scss css/bulma-test.css"
   }
 }
