--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "url": "https://github.com/jgthms/bulma/issues"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.0",
+    "autoprefixer": "^9.8.6",
     "clean-css-cli": "^4.3.0",
     "node-sass": "^4.14.1",
-    "postcss-cli": "^7.1.1",
+    "postcss-cli": "^7.1.2",
     "rimraf": "^3.0.2"
   },
   "scripts": {
@@ -52,5 +52,8 @@
     "bulma.sass",
     "LICENSE",
     "README.md"
-  ]
+  ],
+  "dependencies": {
+    "sass": "^1.35.1"
+  }
 }
