--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bulma-dark",
+  "name": "finalsa-bulma-dark",
   "version": "0.9.3",
   "homepage": "https://bulma.io",
   "author": {
