Fix path to style property in package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "description": "Modern CSS framework based on Flexbox",
   "main": "bulma.sass",
   "unpkg": "css/bulma.css",
-  "style": "bulma/css/bulma.min.css",
+  "style": "css/bulma.min.css",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jgthms/bulma.git"
