Setup Cypress tests for box and button

--- a/docs/package.json
+++ b/docs/package.json
@@ -16,6 +16,8 @@
     "postcss-cli": "^7.1.0"
   },
   "scripts": {
+    "bulma-sass": "node-sass --output-style expanded bulma.scss css/bulma.css",
+    "bulma-watch": "npm run bulma-sass -- --watch",
     "css-build": "npm run css-sass && npm run css-autoprefix && npm run css-cleancss",
     "css-autoprefix": "postcss --use autoprefixer --map false --output css/bulma-docs.css css/bulma-docs.css",
     "css-cleancss": "cleancss -o css/bulma-docs.min.css css/bulma-docs.css",
