--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "clean-css-cli": "^4.3.0",
+    "cypress": "^8.7.0",
     "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.2",
     "rimraf": "^3.0.2"
