Use npm install

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,5 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v2
+        with:
+          install-command: npm install
